SubVersion: $Id$

Log:

- 08/12/2006, version 1.0.3:
	- added new values to FileClass (os, app and tib) enumeration and 
	added the following convenient functions: tifiles_file_is_os and 
	tifiles_file_is_app.
	- added tifiles_file_test function which was planned for a (long) 
	while.
	- fixed tifiles_file_write_tigroup which deleted the output file!
	
- 12/11/2006, version 1.0.2:
	- don't check device_type if data_type is TI89_LICENSE, old 89u files 
	use DEVICE_TYPE_73 (kevin)
	
- 21/09/2006, version 1.0.1:
	- fixed miniunz.c and minizip.c trying to include DOS/Win32 headers 
	under OS X (kevin)
	- changed TIEXPORT into TIEXPORT2
	- again, disabled file checksum verification
	
- 17/09/2006, tagged as version 1.0.0: roms
	- added support for TILIBS_DEPRECATED (exports symbols which have 
	been tagged as deprecated)
	
- 16/09/2006, version 0.2.9: roms
	- added hw_id field to FlashContent structure

- 08/09/2006, version 0.2.8: roms
	- fixed tifiles_ve_dup
	- fixed grouped.c: check for NULL pointer
	- tigroup.c: use #ifndef __WIN32__ instead of #ifdef __LINUX__ to 
	check for strcasecmp vs. stricmp (kevin)
	- tigroup.c: fixed code typos (missing asterisk, m instead of n)(kevin)
	- fixed computation of checksum with TI8x files
	- fixed tigroup.c: check for NULL pointer
	- check for device/data type in FLASH file 

- 25/08/2006, version 0.2.7: roms
	- checked with Valgrind, tested and validated.
	
- 17/08/2006, version 0.2.6: roms
	- added grouping/ungrouping support for TiGroup (eg tigroup.c provides the same API as grouped.c)
		=> note: no functions removed/renamed; just added new ones
	- added tifiles_file_write_flash2 in order not to break API
	- added tifiles_content_dup_regular/flash (not exported)
	- fixed TI8x file support (introduced bug with fortification)
	- added tifiles_build_filename function (which replaces built-in/static code in various 
		places and some built-in code in TiLP).