@@ -9,6 +9,7 @@ Log:
 	- added tifiles_file_test function which was planned for a (long) 
 	while.
 	- fixed tifiles_file_write_tigroup which deleted the output file!
+	- fixed tifiles_file_test (some copy&paste errors)
 	
 - 12/11/2006, version 1.0.2:
 	- don't check device_type if data_type is TI89_LICENSE, old 89u files 
